syntax = "proto3";

option go_package = "/protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service NotificationGrpcService
{
    rpc SendGrpcNotification(NotificationGrpcRequest) returns (google.protobuf.Empty);
}

message NotificationGrpcRequest {
    string _id = 1;
    string deatils = 2;
    string mainuid = 3;

    string targetid = 4;
    bool isreded = 5;
    google.protobuf.Timestamp createdAt = 6;

    Usergrpc user = 7;
}

message Usergrpc {
    string name = 1;
    string avatar = 2;
}